--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DemoCLone- Aman Bhardwaj</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.7.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -139,7 +139,7 @@
 
 
     <script type="text/javascript" src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
